@@ -5,7 +5,7 @@ license     = Perl_5
 copyright_holder = Imaginative Software Systems
 copyright_year   = 2011
 
-version = 0.016
+version = 0.017
 
 [GatherDir]         ; everything under top dir
 [PruneCruft]        ; default stuff to skip
@@ -41,7 +41,6 @@ stopwords = VCS
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
 [Prereqs]           ; prereqs that are not findable
-Term::ANSIColor = 2.02
 
 [MinimumPerl]       ; determine minimum perl version
 [GithubMeta]
