@@ -2,6 +2,10 @@
 
     The "local" configuration paramater is now called "repos".
 
+    Term::ANSIColor is now required, even if you don't use color.
+    I learned from Perl::Critic that optional dependencies can be
+    a real pain in the ass to manage.
+
 0.015     2011-08-18 10:30:01 America/Los_Angeles
 
     Logger output is now colorized.  You can disable colorization in
